# IF2050-2026-K02-G10-Carbonly

./: .flake8  .gitignore  .pre-commit-config.yaml  COMMIT.txt  CONTRIBUTING.md  README.md  carbonly.spec  main.py  pyproject.toml  requirements.txt  test_rekapitulasi.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: lint.yml  release.yml  security.yml  test.yml
src/controllers/: ActivityLogController.py  AuthController.py  EmissionTargetController.py  LogAktivitasController.py  RekapitulasiController.py  SummaryController.py  TargetEmisiController.py  __init__.py
src/models/: ActivityCategory.py  ActivityLog.py  EmissionCoefficient.py  EmissionTarget.py  KategoriAktivitas.py  KoefisienEmisi.py  LogAktivitas.py  TargetEmisi.py  User.py  __init__.py
src/pages/: Example.py  HomePage.py  example.py  log_aktivitas.py
src/services/: AppPaths.py  AuthService.py  DBContext.py  auth_service.py
src/views/: ActivityLogFormView.py  DaftarLogAktivitasView.py  EmissionTargetFormView.py  FormLogAktivitasView.py  FormTargetView.py  HomePage.py  LoginModal.py  LoginView.py  ProfileModal.py  ProfileView.py  RegisterModal.py  RekapitulasiView.py  __init__.py
src/windows/: MainWindow.py
tests/: conftest.py  test_activity_log.py  test_auth_controller.py  test_emission_target.py  test_summary_controller.py  test_target_emisi.py  test_user.py
